# cuddlytoddly

./: .gitignore  .vtcodegitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  bundle.py  configuration.md  pyproject.toml
.github/workflows/: ci.yml
cuddlytoddly/: __main__.py  config.py
cuddlytoddly/core/: events.py  id_generator.py  reducer.py  task_graph.py
cuddlytoddly/docs/: skills.md
cuddlytoddly/engine/: execution_step_reporter.py  llm_orchestrator.py  orchestrator.py  quality_gate.py  signals.py
cuddlytoddly/infra/: event_log.py  event_queue.py  logging.py  replay.py
cuddlytoddly/planning/: llm_executor.py  llm_interface.py  llm_output_validator.py  llm_planner.py  plan_constraint_checker.py  prompts.py  schemas.py
cuddlytoddly/skills/: skill_loader.py
cuddlytoddly/tools/: mcp_adapter.py
cuddlytoddly/ui/: ansi_utils.py  curses_startup.py  curses_ui.py  dag_utils.py  git_projection.py  modals.py  startup.py  ui_config.py  web_server.py  web_ui.html  web_ui_startup.html  web_ui_static.html
cuddlytoddly_agg/: __main__.py  config.py
cuddlytoddly_agg/core/: id_generator.py  task_graph.py
cuddlytoddly_agg/engine/: execution_step_reporter.py  llm_orchestrator.py  quality_gate.py
cuddlytoddly_agg/infra/: logging.py
cuddlytoddly_agg/planning/: llm_output_validator.py  llm_planner.py  plan_constraint_checker.py  prompts.py  schemas.py
cuddlytoddly_agg/tools/: mcp_adapter.py
cuddlytoddly_agg/ui/: curses_ui.py  git_projection.py  startup.py  ui_config.py  web_server.py  web_ui.html  web_ui_startup.html  web_ui_static.html
docs/: api.md  architecture.md  configuration.md  skills.md
tests/: conftest.py  test_bugfixes.py  test_events_reducer.py  test_id_generator.py  test_infra.py  test_integration.py  test_llm_executor.py  test_llm_interface.py  test_llm_validator.py  test_orchestrator.py  test_quality_gate.py  test_skill_loader.py  test_startup.py  test_task_graph.py
toddly/core/: id_generator.py  reducer.py  task_graph.py
toddly/engine/: base_orchestrator.py  execution_step_reporter.py  orchestrator.py  quality_gate.py  signals.py
(+26 files in other folders)
